# graspable_points_detection_ros2

./: CMakeLists.txt  README.md  package.xml
.clang-format/: .clang-format  code_reformat.bash
RVIZ/: HubRobo_RVIZ_20231201.rviz  SCAR-E_RVIZ_20231017.rviz
include/detect_graspable_points/: detect_graspable_points.hpp  settings.hpp
include/pcd_data/: limbero_testfield_halfed.pcd  limbero_testfield_quarted.pcd  realsense_pyramid.pcd  trimmed_big_hold.pcd  trimmed_clean_big_hold.pcd
launch/: detect.rviz  detect_graspable_points.launch  example.launch  example_for_debug.launch  realsense_in_gazebo.launch  rviz.launch
pcd_data/: GripperMask.csv  GripperMask_hubrobo.csv  MID360_trimmed.pcd  artificial_rocks.pcd  limbero_testfield.pcd  limbero_testfield_nohole_quarted.pcd  peak_pcd.pcd  realsense_octree.pcd  tilted_support.pcd
python/: voxel_visualization.py
src/: detect_graspable_points_main.cpp  publish_pointcloud2.cpp
src/detect_graspable_points/: detect_graspable_points.cpp
